--- a/.project/template/CMakePresets.json.in
+++ b/.project/template/CMakePresets.json.in
@@ -13,8 +13,8 @@
             "generator": "${WIN_GENERATOR}",
             "binaryDir": "${sourceDir}/build",
             "cacheVariables": {
-                "CMAKE_C_COMPILER": "${WIN_COMPILER}",
-                "CMAKE_CXX_COMPILER": "${WIN_COMPILER}",
+                "CMAKE_C_COMPILER": "${WIN_C_COMPILER}",
+                "CMAKE_CXX_COMPILER": "${WIN_CXX_COMPILER}",
                 "CMAKE_LINKER": "${WIN_LINK}",
                 "CMAKE_RC_COMPILER": "${WIN_RC}",
                 "CMAKE_MT": "${WIN_MT}",
@@ -66,8 +66,8 @@
             "generator": "${LINUX_GENERATOR}",
             "binaryDir": "${sourceDir}/build",
             "cacheVariables": {
-                "CMAKE_CXX_COMPILER": "${LINUX_COMPILER}",
-                "CMAKE_C_COMPILER": "${LINUX_COMPILER}",
+                "CMAKE_C_COMPILER": "${LINUX_C_COMPILER}",
+                "CMAKE_CXX_COMPILER": "${LINUX_CXX_COMPILER}",
                 "CMAKE_CXX_STANDARD": "${LINUX_CMAKE_CXX_STANDARD}",
                 "CMAKE_TOOLCHAIN_FILE": "${LINUX_TOOLCHAIN}",
                 "VCPKG_TARGET_TRIPLET": "${LINUX_TRIPLET}"
@@ -116,11 +116,11 @@
             "generator": "${MAC_GENERATOR}",
             "binaryDir": "${sourceDir}/build",
             "cacheVariables": {
-                "CMAKE_CXX_COMPILER": "${MAC_COMPILER}",
-                "CMAKE_C_COMPILER": "${MAC_COMPILER}",
+                "CMAKE_C_COMPILER": "${MAC_C_COMPILER}",
+                "CMAKE_CXX_COMPILER": "${MAC_CXX_COMPILER}",
                 "CMAKE_CXX_STANDARD": "${MAC_CMAKE_CXX_STANDARD}",
-                 "CMAKE_TOOLCHAIN_FILE": "${MAC_TOOLCHAIN}",
-                 "VCPKG_TARGET_TRIPLET": "${MAC_TRIPLET}"
+                "CMAKE_TOOLCHAIN_FILE": "${MAC_TOOLCHAIN}",
+                "VCPKG_TARGET_TRIPLET": "${MAC_TRIPLET}"
             },
             "environment": {
                 "PATH": "${MAC_ENV_PATH}"
