build(core): 更新 OpenTimelineIO集成方式
- 移除自定义 FindOpenTimelineIO.cmake 文件
- 更新 CMakeLists.txt 中 OpenTimelineIO 的使用方式
- 修改 opentimelineio-config.cmake 和 portfile.cmake以适应新结构
- 新增 CMakeInstallToProjectDIR.py脚本实现自动化构建和安装

--- a/ext/core/CMakeLists.txt
+++ b/ext/core/CMakeLists.txt
@@ -38,7 +38,6 @@ if(UNIX AND NOT APPLE AND NOT DEFINED OpenGL_GL_PREFERENCE)
   set(OpenGL_GL_PREFERENCE LEGACY)
 endif()
 find_package(OpenGL REQUIRED)
-
 add_library(olivecore
   src/render/audioparams.cpp
   src/render/samplebuffer.cpp
@@ -72,8 +71,8 @@ target_link_libraries(olivecore PRIVATE
 find_package(OpenTimelineIO)
 if (OpenTimelineIO_FOUND)
   target_compile_definitions(olivecore PRIVATE USE_OTIO)
-  target_include_directories(olivecore PRIVATE ${OTIO_INCLUDE_DIRS})
-  target_link_libraries(olivecore PRIVATE ${OTIO_LIBRARIES})
+#  target_include_directories(olivecore PRIVATE ${OPENTIMELINEIO_INCLUDE_DIRS})
+#  target_link_libraries(olivecore PRIVATE OpenTimelineIO::OpenTimelineIO)
 else()
   message("   OpenTimelineIO interchange will be disabled.")
 endif()
