build:优化 Qt MOC处理，提高项目构建效率- 通过 Python 脚本自动生成 QHeaders.cmake 文件，包含所有含 Q_OBJECT 的头文件 - 在 CMakeLists.txt 中引用自动生成的 QHeaders.cmake - 更新 crashhandler 和 app目录下的 CMakeLists.txt，优化 MOC 文件处理 -移除不必要的 #ifdef USE_OTIO 条件编译指令

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -20,6 +20,7 @@ set(OLIVE_SOURCES
         core.cpp
 )
 
+qt5_wrap_cpp(OLIVE_MOCS ${Q_HEADERS})
 #set(OLIVE_RESOURCES)
 
 # Add subdirectories, which will populate the above variables
@@ -72,6 +73,7 @@ add_library(libolive-editor
         OBJECT
         ${OLIVE_SOURCES}
         ${OLIVE_RESOURCES}
+        ${OLIVE_MOCS}
 )
 
 # Remove prefix - prevents CMake calling it "liblibolive-editor"
