--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ option(USE_WERROR "Error on compile warning" OFF)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-set(CMAKE_AUTOMOC ON)
+#set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 
@@ -38,6 +38,9 @@ add_library(olive-sanitizers INTERFACE)
 include(cmake/Sanitizers.cmake)
 enable_sanitizers(olive-sanitizers)
 list(APPEND OLIVE_LIBRARIES olive-sanitizers)
+
+#set QHeader
+include(cmake/QHeaders.cmake)
 
 # Set compiler options
 if (MSVC)
