feat(KDDockWidgets): 添加 QtQuick 支持
- 新增 QtQuick 相关的源码文件和头文件
- 修改 CMakeLists.txt，增加 QtQuick相关的配置选项
- 在现有代码中添加对 QtQuick 的条件编译支持
- 更新文件结构，分离 QtWidgets 和 QtQuick 的实现

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ project(olive-editor VERSION 0.2.0 LANGUAGES CXX)
 option(BUILD_QT6 "Build with Qt 6 over 5 (experimental)" OFF)
 option(BUILD_DOXYGEN "Build Doxygen documentation" OFF)
 option(BUILD_TESTS "Build unit tests" OFF)
+option(${PROJECT_NAME}_QTQUICK "Build for QtQuick instead of QtWidgets" OFF)
 option(USE_WERROR "Error on compile warning" OFF)
 
 set(CMAKE_CXX_STANDARD 20)
@@ -74,6 +75,13 @@ set(OLIVE_DEFINITIONS -DQT_DEPRECATED_WARNINGS)
 if (WIN32)
     list(APPEND OLIVE_DEFINITIONS -DUNICODE -D_UNICODE)
 endif ()
+
+if (${PROJECT_NAME}_QTQUICK)
+    list(APPEND OLIVE_DEFINITIONS -DKDDOCKWIDGETS_QTQUICK)
+else ()
+    list(APPEND OLIVE_DEFINITIONS -DKDDOCKWIDGETS_QTWIDGETS)
+endif ()
+
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
