ci:重构 CMake 配置并添加 Valgrind 测试支持
- 修改 app/CMakeLists.txt，添加 Valgrind 测试相关配置
- 更新 tests/CMakeLists.txt，统一测试命令格式- 在 CMakeLists.txt 中启用 TESTS_VALGRIND 选项- 重构 CMakePresetsGenerator.py，支持生成测试预设- 更新 template.json，添加 Valgrind 测试工作流配置

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,8 @@ cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
 project(olive-editor VERSION 0.2.0 LANGUAGES CXX)
 option(BUILD_QT6 "Build with Qt 6 over 5 (experimental)" OFF)
 option(BUILD_DOXYGEN "Build Doxygen documentation" OFF)
-option(BUILD_TESTS "Build unit tests" OFF)
+option(BUILD_TESTS "Build unit tests" ON)
+option(TESTS_VALGRIND "Build unit tests" OFF)
 option(${PROJECT_NAME}_QTQUICK "Build for QtQuick instead of QtWidgets" OFF)
 option(USE_WERROR "Error on compile warning" OFF)
 option(ENABLE_CLANG_FORMAT "Enable Clang Format" OFF)
