build: 在 Windows 平台添加 NOMINMAX 定义
- 在 crashhandler 和主项目中添加 NOMINMAX 定义，以避免 min/max 宏冲突
- 仅在 Windows 平台进行此定义，其他平台不受影响- 解决了在 Windows 上编译时可能出现的宏定义冲突问题

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -226,7 +226,10 @@ endif ()
 # Optional: Link Google Crashpad
 find_package(GoogleCrashpad)
 if (GoogleCrashpad_FOUND)
-#    list(APPEND OLIVE_DEFINITIONS USE_CRASHPAD)
+    list(APPEND OLIVE_DEFINITIONS USE_CRASHPAD)
+    if (WIN32)
+        list(APPEND OLIVE_DEFINITIONS NOMINMAX)
+    endif ()
     list(APPEND OLIVE_INCLUDE_DIRS ${CRASHPAD_INCLUDE_DIRS})
     list(APPEND OLIVE_LIBRARIES ${CRASHPAD_LIBRARIES})
 else ()
