test:调整测试执行命令以适应 Visual Studio 生成器
- 在 CMakeLists.txt 中添加对 Visual Studio 生成器的特殊处理
- 为 Visual Studio 生成器配置 Debug 模式的测试执行路径
- 在 CMakePresetsGenerator.py 中为测试预设添加 configuration 字段
-优化了测试预设的显示名称和配置设置

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -62,7 +62,14 @@ function(olive_add_test GROUP NAME SOURCE)
             ${OLIVE_COMPILE_OPTIONS}
     )
     # 修改 add_test 使用完整路径
-    add_test(NAME ${NAME} COMMAND "${CMAKE_BINARY_DIR}/bin/${NAME}")
+    if (CMAKE_GENERATOR MATCHES "Visual Studio")
+        message(STATUS "CMAKE_GENERATOR VS:${CMAKE_GENERATOR}")
+        add_test(NAME ${NAME} COMMAND "${CMAKE_BINARY_DIR}/bin/Debug/${NAME}")
+    else ()
+        message(STATUS "CMAKE_GENERATOR OTHER:${CMAKE_GENERATOR}")
+        add_test(NAME ${NAME} COMMAND "${CMAKE_BINARY_DIR}/bin/${NAME}")
+    endif ()
+
     set_tests_properties(${NAME} PROPERTIES WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
     message(STATUS "Added test ${NAME} with command ${CMAKE_BINARY_DIR}/bin/${NAME}")
 endfunction()
