feat(build): 添加 Clang-Tidy 支持
- 在 CMakeLists.txt 中添加 ENABLE_CLANG_TIDY 选项
- 实现 clang-tidy-fix 目标以应用自动修复
- 添加 clang-tidy-check 目标以进行静态分析检查
- 在项目模板中添加 ClangTidy Fix 构建配置

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ option(${PROJECT_NAME}_QTQUICK "Build for QtQuick instead of QtWidgets" OFF)
 option(USE_WERROR "Error on compile warning" OFF)
 option(ENABLE_CLANG_FORMAT "Enable Clang Format" OFF)
 option(ENABLE_CLANG_FORMAT_CHECK "Enable Clang Format" OFF)
+option(ENABLE_CLANG_TIDY "Enable clang-tidy checks and automatic fixes" OFF) # 建议默认关闭
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -303,3 +304,79 @@ if(ENABLE_CLANG_FORMAT)
                 "Please install clang-format or set ENABLE_CLANG_FORMAT to OFF.")
     endif()
 endif()
+
+option(ENABLE_CLANG_TIDY "Enable clang-tidy checks and automatic fixes" OFF) # 建议默认关闭
+
+if(ENABLE_CLANG_TIDY)
+
+    # --- 检查前提条件：compile_commands.json ---
+    # Clang-Tidy 需要编译命令来正确解析代码
+    if(NOT CMAKE_EXPORT_COMPILE_COMMANDS)
+        message(WARNING "ENABLE_CLANG_TIDY is ON, but CMAKE_EXPORT_COMPILE_COMMANDS is not explicitly set to ON. "
+                "Clang-Tidy relies on 'compile_commands.json' for accurate analysis. "
+                "Please add 'set(CMAKE_EXPORT_COMPILE_COMMANDS ON)' near the top of your main CMakeLists.txt.")
+    endif()
+
+    # --- 查找 Clang-Tidy 可执行文件 ---
+    # 尝试查找不同版本的 clang-tidy，优先使用带版本号的（如果存在）
+    find_program(CLANGTIDY_EXECUTABLE
+            NAMES clang-tidy-16 clang-tidy-15 clang-tidy-14 clang-tidy # 您可以根据需要添加更多版本
+            DOC "Path to clang-tidy executable")
+
+    if(CLANGTIDY_EXECUTABLE)
+        message(STATUS "Found clang-tidy: ${CLANGTIDY_EXECUTABLE}")
+
+        # --- 选择要进行 Tidy 的文件 ---
+        # 使用 GLOB_RECURSE 查找指定目录下的 C++ 源文件和头文件
+        # 注意：GLOB_RECURSE 返回绝对路径
+        file(GLOB_RECURSE TIDY_FILES
+                "app/*.h"
+                "app/*.cpp"
+                "ext/*.cpp"
+                "ext/*.h"
+                # 您可以根据项目结构调整路径和模式
+        )
+
+        if(NOT TIDY_FILES)
+            message(WARNING "ENABLE_CLANG_TIDY: No files found matching the specified patterns.")
+        else()
+            # --- 添加自定义目标：运行 clang-tidy 并自动修复 ---
+            # 这个目标需要手动执行（例如 'make clang-tidy-fix' 或 'ninja clang-tidy-fix'）
+            add_custom_target(clang-tidy-fix
+                    COMMAND ${CLANGTIDY_EXECUTABLE}
+                    --fix              # 应用 Clang-Tidy 建议的修复
+                    # --fix-errors     # 或者只修复明确的错误（更保守）
+                    # -p ${CMAKE_BINARY_DIR} # 可选：显式指定编译数据库路径，但通常clang-tidy能自动找到
+                    # --quiet          # 可选：减少输出信息
+                    # 您可以在这里添加 --checks='...' 来指定检查项，
+                    # 但如果省略，它会使用 .clang-tidy 文件或默认检查项。
+                    ${TIDY_FILES}
+                    COMMENT "Running clang-tidy to apply automatic fixes (using .clang-tidy or defaults)..."
+                    VERBATIM # 确保命令行参数被正确处理
+            )
+            message(STATUS "Added target 'clang-tidy-fix'. Run manually, e.g., 'make clang-tidy-fix'.")
+
+            # --- 添加可选的自定义目标：仅检查，发现问题则失败 ---
+            option(ENABLE_CLANG_TIDY_CHECK "Enable clang-tidy check target (fails build on issues)" OFF)
+            if(ENABLE_CLANG_TIDY_CHECK)
+                add_custom_target(clang-tidy-check
+                        COMMAND ${CLANGTIDY_EXECUTABLE}
+                        # 不带 --fix，仅进行检查并报告问题
+                        # 如果发现任何需要修改的地方，clang-tidy 会返回非零退出码，这将导致此目标失败
+                        # -p ${CMAKE_BINARY_DIR} # 可选
+                        # --quiet          # 可选
+                        ${TIDY_FILES}
+                        COMMENT "Running clang-tidy checks (will fail build on issues)..."
+                        VERBATIM
+                )
+                message(STATUS "Added target 'clang-tidy-check'. Run manually or add to CI pipeline.")
+            endif() # ENABLE_CLANG_TIDY_CHECK
+        endif() # TIDY_FILES
+
+    else()
+        # 如果启用了 Clang-Tidy 但找不到可执行文件，则报错
+        message(FATAL_ERROR "clang-tidy executable not found, but ENABLE_CLANG_TIDY is ON. "
+                "Please install clang-tidy (version matching your compiler is recommended) "
+                "or set ENABLE_CLANG_TIDY to OFF.")
+    endif() # CLANGTIDY_EXECUTABLE
+endif() # ENABLE_CLANG_TIDY
